--- a/collections/docs/lisp/codes/nuclblog_0.5/ext-blog/static/ext-blog.css
+++ b/collections/docs/lisp/codes/nuclblog_0.5/ext-blog/static/ext-blog.css
@@ -122,3 +122,14 @@ div.nuclblog-content-nav {
     padding-right: 60px;
 }
 
+div.nuclblog-comment {
+    background: #F8F8F8;
+    border-top: 1px solid #BBB;
+    border-left: 1px solid #BBB;
+    border-bottom: 2px solid #999;
+    border-right: 2px solid #888;
+    padding: 10px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+}
+
