--- a/collections/docs/lisp/codes/nuclblog_0.5/ext-blog/static/rststyle.css
+++ b/collections/docs/lisp/codes/nuclblog_0.5/ext-blog/static/rststyle.css
@@ -237,6 +237,7 @@ pre.address {
   font: inherit }
 
 pre.literal-block, pre.doctest-block {
+  background: #BBBBBB;
   margin-left: 2em ;
   margin-right: 2em }
 
